doc/v2.0/_sources/reference/generated/ak.nanvar.rst.txt
ak.nanvar
---------

.. py:module: ak.nanvar

Defined in `awkward.operations.ak_var <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_var.py>`__ on `line 94 <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_var.py#L94>`__.

.. py:function:: ak.nanvar(x, weight=None, ddof=0, axis=None, *, keepdims=False, mask_identity=True, flatten_records=unset)


    :param x: The data on which to compute the variance (anything :py:obj:`ak.to_layout` recognizes).
    :param weight: Data that can be broadcasted to ``x`` to give each value a
               weight. Weighting values equally is the same as no weights;
               weighting some values higher increases the significance of those
               values. Weights can be zero or negative.
    :param ddof: "delta degrees of freedom": the divisor used in the
             calculation is ``sum(weights) - ddof``. Use this for "reduced
             variance."
    :type ddof: int
    :param axis: If None, combine all values from the array into
             a single scalar result; if an int, group by that axis: ``0`` is the
             outermost, ``1`` is the first level of nested lists, etc., and
             negative ``axis`` counts from the innermost: ``-1`` is the innermost,
             ``-2`` is the next level up, etc.
    :type axis: None or int
    :param keepdims: If False, this function decreases the number of
                 dimensions by 1; if True, the output values are wrapped in a new
                 length-1 dimension so that the result of this operation may be
                 broadcasted with the original array.
    :type keepdims: bool
    :param mask_identity: If True, the application of this function on
                      empty lists results in None (an option type); otherwise, the
                      calculation is followed through with the reducers' identities,
                      usually resulting in floating-point ``nan``.
    :type mask_identity: bool

Like :py:obj:`ak.var`, but treating NaN ("not a number") values as missing.

Equivalent to

.. code-block:: python


    ak.var(ak.nan_to_none(array))

with all other arguments unchanged.

See also :py:obj:`ak.var`.

